--- a/alignmentusageexample/pom.xml
+++ b/alignmentusageexample/pom.xml
@@ -25,6 +25,12 @@
 		<artifactId>common</artifactId>
 		<version>1.1.3-SNAPSHOT</version>
 	</dependency>
+
+<!-- 	<dependency> -->
+<!-- 		<groupId>eu.excitementproject</groupId> -->
+<!-- 		<artifactId>core</artifactId> -->
+<!-- 		<version>1.1.3-SNAPSHOT</version> -->
+<!-- 	</dependency> -->
 	
 	<dependency>
 		<groupId>eu.excitementproject</groupId>
